# TutorBuddy

./: .gitignore  README.md  alembic.ini  main.py  package-lock.json  pyproject.toml  set_webhook_url.py  start_aalingua_admin.sh  start_aalingua_bot.sh  start_bot.sh  start_ekaterina_admin.sh  start_ekaterina_bot.sh  start_oksana_admin.sh  start_oksana_bot.sh  start_original_admin.sh  start_original_bot.sh  start_test_admin.sh  start_test_bot.sh  start_victoria_admin.sh  start_victoria_bot.sh  start_webhook.sh  wsgi.py  wsgi_bot.py
alembic/: env.py  script.py.mako
alembic/versions/: 05927834daa0_admin_table_added.py  0f2a0514f4ea_added_hint_table.py  161bb894d062_daily_news_text.py  1d8d0be68f2a_init_messagehistory_table.py  1e96b095c23b_added_hint_table.py  25b0e9871ca3_user_roles.py  286c1b7dcff3_added_message_mistakes_table.py  31139e0e4554_added_user_message_mistakes_table.py  4566b4ad19fa_daily_news.py  4d2f397e8ef6_added_person_lookup_table.py  4de1582836c9_added_victorias_person.py  502d0b325b66_daily_news_upgrade.py  5a484554dd0e_added_settings_for_user.py  930721df6aae_.py  (+23 more)
config/: aalingua_bot_conf.env.local  ekaterina_bot_conf.env.local  kolya_test_bot_config.env.local  my_conf.env.local  oksana_bot_conf.env.local  original_bot_conf.env.local  test_bot_conf.env.local  victoria_bot_conf.env.local
docs/: GenerateAI.md  generate.md
files/: bot_pin_message.opus  pin_message_nastya.opus  summary_choice_bot.opus  summary_choice_nastya.opus
templates/: admin.html  admin_old.html  change_password.html  dialogs.html  login.html  login_old.html  newsletters.html
(+227 files in other folders)
