[tool.poetry]
name = "aitutorbuddybot"
version = "0.1.0"
description = ""
authors = ["Ai TutorBuddy Development"]
readme = "README.md"
packages = [{include = "fastapi_app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
yookassa = "^2.4.0"
websockets = "^11.0.3"
sqlalchemy = "^2.0.21"
pydantic = "^2.3.0"
aiofiles = "23.1.0"
aiogram = "2.25.2"
python-dotenv = "^1.0.0"
asyncpg = "^0.29.0"
itsdangerous = "^2.1.2"
alembic = "^1.12.1"
passlib = "^1.7.4"
gunicorn = "^21.2.0"
fastapi = "^0.104.1"
sqlalchemy-file = "^0.6.0"
pillow = "^10.1.0"
fasteners = "^0.19"
jsonschema = "^4.20.0"
starlette-admin = "^0.13.2"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
